Cretion de la base de donnee

--- a/ReactApp.Server/appsettings.json
+++ b/ReactApp.Server/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "VotreCléSecrèteTrèsclaudeEtSécurisée1234567890!@#$%^&*()",
+    "Issuer": "votre_issuer",
+    "Audience": "votre_audience",
+    "ExpireMinutes": 60
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=C:\\Users\\price\\source\\repos\\pricemou\\ReactApp\\ReactApp.Server\\Data\\Decodeur.db"
+  }
 }
