Ajouter des different API Post,Get, Delet

--- a/ReactApp.Server/appsettings.json
+++ b/ReactApp.Server/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "VotreCléSecrèteTrèsclaudeEtSécurisée1234567890!@#$%^&*()",
-    "Issuer": "votre_issuer",
-    "Audience": "votre_audience",
+    "Issuer": "MonApplication",
+    "Audience": "MonAudience",
     "ExpireMinutes": 60
   },
   "ConnectionStrings": {
